[FIX]: EventStoreService, EventDesignService, EventService 썸네일 관련 로직 수정 및 리팩토링
- 매핑 제거 시 썸네일이 삭제된 항목에 해당하는 경우 썸네일 재설정 로직 추가
- resolveAndUpdateThumbnail 메소드 적용
- 매핑 일괄 업데이트 로직 리팩토링 (중복 제거 및 책임 분리)